# InTune

./: README.md  USER_MANUAL.md  build_log.txt  flutter_launcher_icons.yaml  flutter_native_splash.yaml  gradle_output.txt  pubspec.yaml  win_error.txt
android/: gradle_error.txt  gradle_log.txt  key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
installers/: velocity_installer.iss
lib/: main.dart  main_android.dart  main_windows.dart
lib/core/constants/: app_constants.dart  file_transfer_constants.dart  network_constants.dart
lib/core/exceptions/: network_exceptions.dart
lib/core/models/: clipboard_message.dart  connection_state.dart  device_info.dart  file_transfer_message.dart  file_transfer_progress.dart  handshake_packet.dart  input_event.dart  message_envelope.dart  notification_message.dart  pairing_message.dart  screen_frame_message.dart
lib/core/theme/: velocity_theme.dart
lib/core/utils/: byte_counting_transformer.dart  logger.dart  speed_calculator.dart  validators.dart
lib/features/system_integration/: android_background_service.dart  system_tray_manager.dart
mock_plugins/permission_handler_windows/: pubspec.yaml
mock_plugins/permission_handler_windows/windows/: CMakeLists.txt  permission_handler_windows_plugin.cpp
mock_plugins/permission_handler_windows/windows/include/permission_handler_windows/: permission_handler_windows_plugin.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+48 files in other folders)
